Fix grid overlap. (#1)

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -313,6 +313,8 @@ nav {
     color: inherit;
     cursor: pointer;
     background-color: var(--bg);
+    margin-right: -1px;
+    margin-bottom: -1px;
 }
 
 .team-card:hover {
